# encapsia-api

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  tasks.py  tox.ini
.github/workflows/: main.yml
encapsia_api/: __init__.py  analytics.py  credentials.py  lib.py  package.py  plugin.py  resilient_request.py  rest.py  test_rest.py  util.py
encapsia_api/tests/: test_credentials.py  test_package.py  test_plugin.py  test_resilient_request.py  test_rest.py
