[tool.poetry]
name = "encapsia-api"
version = "0.2.2"
description = "Client API for talking to an Encapsia system."
readme = "README.md"
authors = ["Timothy Corbett-Clark <timothy.corbettclark@gmail.com>"]
license = "MIT"
keywords = ["encapsia", "eSource", "EDC", "Clinical Trials"]
homepage = "https://github.com/tcorbettclark/encapsia-api"

[tool.poetry.dependencies]
python = "^3.6"
requests = {version = "^2.24",extras = ["security"]}
toml = "^0.10"
arrow = "^0.16"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1",allow-prereleases = true}
isort = "^5.4"
flake8 = "^3.8"
pytest = "^6.0.1"
mypy = "^0.782"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
