[tool.poetry]
name = "encapsia-api"
version = "0.3.2"
description = "Client API for talking to an Encapsia system."
readme = "README.md"
authors = ["Timothy Corbett-Clark <timothy.corbettclark@gmail.com>"]
license = "MIT"
keywords = ["encapsia", "eSource", "EDC", "Clinical Trials"]
homepage = "https://github.com/tcorbettclark/encapsia-api"

[tool.poetry.dependencies]
python = "^3.7"
requests = {version = "^2.24",extras = ["security"]}
toml = "^0.10"
arrow = "^0.16"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^7.2.0"
mypy = "^0.990"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
